--- a/index.html
+++ b/index.html
@@ -57,10 +57,14 @@
             <img src="billtay.jpg" style="width:100%">
             <h1>Awards</h1>
         <p>I have numerous awards, they include but may not be limited to:
-            The above award I received from Bill Taylor which I did nothing to earn
+            The above award I received from Bill Taylor which I did nothing to earn.
+
             Most Shifts Covered (I earned that one)
+
             Rookie of the Year (Ski Instructing)
+
             Treehouse Handy Helper (Putting mittens on children and teaching them to ski)
+            
             Class Clown (I am a self certified professional humorist)
 
         </p>
