--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
         <p>I have numerous awards, they include but may not be limited to:
             The above award I received from Bill Taylor which I did nothing to earn.
 
-            Most Shifts Covered (I earned that one)
+            Most Shifts Covered (I earned that one).
 
-            Rookie of the Year (Ski Instructing)
+            Rookie of the Year (Ski Instructing).
 
-            Treehouse Handy Helper (Putting mittens on children and teaching them to ski)
-            
-            Class Clown (I am a self certified professional humorist)
+            Treehouse Handy Helper (Putting mittens on children and teaching them to ski).
+
+            Class Clown (I am a self certified professional humorist).
 
         </p>
     </div>
