--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="col-xs-4 col-lg-4">
             <img src="keytar.jpg" style="width:100%">
             <h1>Abilities</h1>
-        <p>My autodidact status has allowed me to gain culinary skills like cheesemaking and pizza dough tossing, and about 6 instruments including the keytar</p>
+        <p>My autodidact status has allowed me to gain culinary skills like cheesemaking and pizza dough tossing, and the ability to play about 6 instruments, including the keytar.</p>
       </div>
       <div class="col-xs-4 col-lg-4" >
             <img src="divergent.jpg" style="width:100%">
